changes have been made

--- a/dsan-website/5000-website/codes/dimensionalityreduction.ipynb
+++ b/dsan-website/5000-website/codes/dimensionalityreduction.ipynb
@@ -725,8 +725,7 @@
     "plt.ylabel('Cumulative Explained Variance')\n",
     "plt.title('Scree Plot')\n",
     "plt.grid()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -1142,7 +1141,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "To summarise, the decision between PCA and t-SNE is influenced by the type of the data, the size of the dataset, and the specific goals of the research. Both strategies yield useful insights, and a well-considered mix of both methods can provide a more comprehensive knowledge of complex datasets. Yet, for mine, neither worked."
+    "To summarise, the decision between PCA and t-SNE is influenced by the type of the data, the size of the dataset, and the specific goals of the research. Both strategies yield useful insights, and a well-considered mix of both methods can provide a more comprehensive knowledge of complex datasets. Yet, for mine, neither worked.\n",
+    "\n",
+    "The instances when one technique may outperform any other is understanding the situations when it is usually used. PCA is generally a linear technique that usually works well when the data is linear but t-SNE on the other hand adheres to capturing the complex and non-linear datasets. Additionally, PCAs are effective at preserving the global structure of the data and t-SNE at preserving the local structure of the dataset. However, when you try to understand it through visualisation, usually for t-SNE, since it is more suitable for lower-dimensional data, is better for the same. PCA is computationally efficient but cannot capture the intricate aspects of the data. One thing that I have witnessed personally whilst work on both PCA and t-SNE is that for t-SNE, it is more affected by the choice of the perplexity values. In conclusion, for my data, PCA performed better although the feature set is higher, attuning to the fact that I had already dropped the highly correlated variables from the dataset, thus contributing to better performance of PCA. \n"
    ]
   },
   {
