--- a/dsan-website/5000-website/codes/clustering.ipynb
+++ b/dsan-website/5000-website/codes/clustering.ipynb
@@ -95,12 +95,7 @@
     "\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
-    "y_encoded = label_encoder.fit_transform(y)\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "scaled_data = scaler.fit_transform(x1)\n",
-    "\n",
-    "\n"
+    "y_encoded = label_encoder.fit_transform(y)\n"
    ]
   },
   {
@@ -232,25 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 3, 3, 3, 4, 4, 3, 3, 3, 4,\n",
-       "       3, 4, 3, 3, 3, 4, 3, 4, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 3, 4, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 3, 3, 3, 4, 4, 3, 3, 3, 4, 3, 4,\n",
-       "       3, 3, 3, 4, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 3, 3, 3, 4, 4,\n",
-       "       3, 3, 3, 4, 3, 4, 3, 3, 3, 4, 3, 4, 3, 3, 4, 4, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 1, 1, 1, 1, 3, 3, 3, 4, 4, 3, 3, 3, 4, 3, 4, 3, 3, 3, 4,\n",
-       "       3, 4, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 5, 3, 4, 5, 5, 0, 2, 5, 0, 0,\n",
-       "       2, 2, 2, 2, 2, 1, 1, 1, 3, 3, 3, 3, 4, 3, 4, 3, 3, 3, 4, 3, 4, 3,\n",
-       "       3, 4, 4, 4, 4, 4, 4, 4, 4, 5, 3, 4, 5, 5, 0, 2, 5, 0, 0],\n",
-       "      dtype=int32)"
+       "array([2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 1, 1], dtype=int32)"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +245,7 @@
     "k = 6\n",
     "kmeans = KMeans(n_clusters=k, random_state=2339)\n",
     "optimal_kmeans = kmeans.fit_predict(x)\n",
-    "optimal_kmeans"
+    "optimal_kmeans[0:15]"
    ]
   },
   {
@@ -333,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you look at the overall relationships of all the variables with one another, this also gives us an interesting plot to look at. "
+    "If you look at the overall relationships of all the variables with one another, this also gives us an interesting plot to look at. For instance, Military Spending is an interesting component for me to look at since you can see visual relationships with other monetary and fiscal data points."
    ]
   },
   {
