changes have been made

--- a/dsan-website/5000-website/codes/naivebayes.ipynb
+++ b/dsan-website/5000-website/codes/naivebayes.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title:   \"Naive Bayes\"\n",
+    "author: \"Sheeba Moghal\"\n",
+    "format:\n",
+    "    html:\n",
+    "        embed-resources: true\n",
+    "        code-fold: true\n",
+    "execute:\n",
+    "    echo: true\n",
+    "jupyter: python3\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
