--- a/dsan-website/5000-website/codes/EDA + Naive Bayes.ipynb
+++ b/dsan-website/5000-website/codes/EDA + Naive Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9aaff00e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
     "china=pd.read_csv(\"/Users/sheebamoghal/Downloads/china.csv\")\n",
     "brazil=pd.read_csv(\"/Users/sheebamoghal/Downloads/brazil.csv\")\n",
     "southafrica=pd.read_csv(\"/Users/sheebamoghal/Downloads/southafrica.csv\")\n",
-    "stacked_df = pd.concat([india, russia, china, brazil, southafrica])"
+    "stacked_df = pd.concat([india, russia, china, brazil, southafrica])\n"
    ]
   },
   {
