--- a/dsan-website/5000-website/codes/roughcode.ipynb
+++ b/dsan-website/5000-website/codes/roughcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 1,
    "id": "9aaff00e",
    "metadata": {},
    "outputs": [],
@@ -16,17 +16,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 13,
    "id": "e0778af9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year  adj_NNI_g     adj_NNI_c  adj_savings_fix_cap_GNI  \\\n",
+      "0  1979  11.978544  2.476830e+11                 8.055168   \n",
+      "1  1980  -2.572689  2.413109e+11                 8.393346   \n",
+      "2  1981   1.626264  2.452352e+11                 8.819348   \n",
+      "3  1982  11.562099  2.735896e+11                 8.419293   \n",
+      "\n",
+      "   adj_savings_edu_GNI  adj_NNS_GNI  curr_acc_bal  ex_imp_gdp  ex_imp_growth  \\\n",
+      "0             2.600000     6.418183     -0.958069    6.139551       5.237330   \n",
+      "1             2.600000     7.373027     -1.394549    5.936027      -0.816934   \n",
+      "2             3.051058     7.043158     -1.257273    5.983300       6.020508   \n",
+      "3             3.153437     7.024774     -0.887438    5.837629      -0.914918   \n",
+      "\n",
+      "   ex_debt_shocks  ...        cpi  inflation  real_interest_rate  \\\n",
+      "0       11.096107  ...   9.737409  11.346073            4.476508   \n",
+      "1       11.615484  ...  11.014232  13.112547            5.118237   \n",
+      "2       13.467614  ...  11.883336   7.890743            7.774707   \n",
+      "3       14.101651  ...  13.293660  11.868081            7.320987   \n",
+      "\n",
+      "   lending_interest_rate  life_exp_birth  expense_gdp  interest_payments  \\\n",
+      "0                   16.5          53.611    11.702478          13.780033   \n",
+      "1                   16.5          54.175    11.376034          14.073244   \n",
+      "2                   16.5          54.732    11.959873          15.563031   \n",
+      "3                   16.5          55.281    12.077793          17.460567   \n",
+      "\n",
+      "   military expenditure  year.1            labels  \n",
+      "0              3.133781  1979.0       High Growth  \n",
+      "1              3.186248  1980.0       High Growth  \n",
+      "2              3.345118  1981.0   Moderate Growth  \n",
+      "3              3.323069  1982.0  Very High Growth  \n",
+      "\n",
+      "[4 rows x 36 columns]\n",
+      "   year  adj_NNI_g     adj_NNI_c  adj_savings_fix_cap_GNI  \\\n",
+      "0  1979  11.978544  2.476830e+11                 8.055168   \n",
+      "1  1980  -2.572689  2.413109e+11                 8.393346   \n",
+      "2  1981   1.626264  2.452352e+11                 8.819348   \n",
+      "3  1982  11.562099  2.735896e+11                 8.419293   \n",
+      "\n",
+      "   adj_savings_edu_GNI  adj_NNS_GNI  curr_acc_bal  ex_imp_gdp  ex_imp_growth  \\\n",
+      "0             2.600000     6.418183     -0.958069    6.139551       5.237330   \n",
+      "1             2.600000     7.373027     -1.394549    5.936027      -0.816934   \n",
+      "2             3.051058     7.043158     -1.257273    5.983300       6.020508   \n",
+      "3             3.153437     7.024774     -0.887438    5.837629      -0.914918   \n",
+      "\n",
+      "   ex_debt_shocks  ...        cpi  inflation  real_interest_rate  \\\n",
+      "0       11.096107  ...   9.737409  11.346073            4.476508   \n",
+      "1       11.615484  ...  11.014232  13.112547            5.118237   \n",
+      "2       13.467614  ...  11.883336   7.890743            7.774707   \n",
+      "3       14.101651  ...  13.293660  11.868081            7.320987   \n",
+      "\n",
+      "   lending_interest_rate  life_exp_birth  expense_gdp  interest_payments  \\\n",
+      "0                   16.5          53.611    11.702478          13.780033   \n",
+      "1                   16.5          54.175    11.376034          14.073244   \n",
+      "2                   16.5          54.732    11.959873          15.563031   \n",
+      "3                   16.5          55.281    12.077793          17.460567   \n",
+      "\n",
+      "   military expenditure  year.1            labels  \n",
+      "0              3.133781    1979       High Growth  \n",
+      "1              3.186248    1980       High Growth  \n",
+      "2              3.345118    1981   Moderate Growth  \n",
+      "3              3.323069    1982  Very High Growth  \n",
+      "\n",
+      "[4 rows x 36 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "india=pd.read_csv(\"/Users/sheebamoghal/Downloads/india.csv\")\n",
     "russia=pd.read_csv(\"/Users/sheebamoghal/Downloads/russia.csv\")\n",
     "china=pd.read_csv(\"/Users/sheebamoghal/Downloads/china.csv\")\n",
     "brazil=pd.read_csv(\"/Users/sheebamoghal/Downloads/brazil.csv\")\n",
     "southafrica=pd.read_csv(\"/Users/sheebamoghal/Downloads/southafrica.csv\")\n",
-    "stacked_df = pd.concat([india, russia, china, brazil, southafrica])"
+    "stacked_df = pd.concat([india, russia, china, brazil, southafrica])\n",
+    "\n",
+    "pd.save\n",
+    "\n",
+    "\n"
    ]
   },
   {
