--- a/dsan-website/5000-website/codes/decisiontree_r.ipynb
+++ b/dsan-website/5000-website/codes/decisiontree_r.ipynb
@@ -1171,7 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In accordance to the performance, that there is still overfitting of the data in terms of the RMSE from the training and testing data for both baseline Random Forest and the one that is tuned by GridSearchCV, however, we see that out of all the models, "
+    "In accordance to the performance, that there is still overfitting of the data in terms of the RMSE from the training and testing data for both baseline Random Forest and the one that is tuned by GridSearchCV, however, we see that out of all the models, the GridSearchCV with Random Forest works the best."
    ]
   },
   {
