changes have been made

--- a/dsan-website/5000-website/codes/decisiontree_r.ipynb
+++ b/dsan-website/5000-website/codes/decisiontree_r.ipynb
@@ -587,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decision Tree : RandomisedSearchCV"
+    "# Decision Tree Regressor : RandomisedSearchCV"
    ]
   },
   {
@@ -1172,6 +1172,17 @@
    "metadata": {},
    "source": [
     "In accordance to the performance, that there is still overfitting of the data in terms of the RMSE from the training and testing data for both baseline Random Forest and the one that is tuned by GridSearchCV, however, we see that out of all the models, the GridSearchCV with Random Forest works the best."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In conclusion, I can say that hyperparameter tuning actually helps with the model and random forest performs the best in comparison the decision tree model. When we look in terms of Decision Tree, hyperparameter tuning with RandomisedSearchCV performs the best in reducing the overfitting and in terms of Random Forest, hyperparameter tuning with GridSearchCV performs the best and overall as well. \n",
+    "\n",
+    "However, there is still a lot of overfitting. If time permits, I would look into the nature of the data and explore it in terms of the time series perspective to reduce autocorrelation and look into more overfitting techniques like L1 and L2 regularization techniques."
    ]
   },
   {
